[SHIRO-895] hazelcast/powermock/guice Java17 compat